fix: EGL surface validation, UI scale fixes, startup perf
- Add Egl.GetError() check after ImGui render to detect abandoned surfaces
- Remove close button (×) from main window (ImGui.Begin without ref)
- Defer ApplyConfig to first Render to avoid pre-context ImGui access
- Scale ImGui styles (FramePadding, ItemSpacing, etc.) with font scale
- ApplyStyleScale called on slider change for live button resizing
- Switch ModManagerConfig.Load to Newtonsoft.Json (~2s faster startup)
- Add Managed.cs startup timing (Stopwatch, single total line)
- Add Benchmark class (Begin/End with Action<double>)
- Guard all ImGuiInputHandler callbacks with IsInitialized flag
- ImGuiEGLRender.CreateContext sets ImGuiInputHandler.IsInitialized = true
- Fix ModManager.extractRuntime assets path ("runtime/" prefix)
- ModManagerUpdater: add useNewThread param, adjust log levels, remove debug logs
- Mods directory setting: text-only display, remove fixed-size buttons
- Remove LoadPriority from IModPlugin/ModEntry/ModLoader